--- a/packages/webpack4/demo1/.vscode/launch.json
+++ b/packages/webpack4/demo1/.vscode/launch.json
@@ -4,10 +4,11 @@
   // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    // https://github.com/jerryni/blog/issues/32
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch via NPM",
+      "name": "debug Webpack",
       "runtimeExecutable": "npm",
       "runtimeArgs": [
         "run-script",
