--- a/packages/webpack4/demo2/package.json
+++ b/packages/webpack4/demo2/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config ./webpack.config.js",
+    "dev": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
