--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "devDependencies": {
     "lerna": "^3.10.5",
-    "webpack": "^4.29.4"
+    "webpack": "^4.29.4",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
