--- a/packages/output-analysis/demo1/package.json
+++ b/packages/output-analysis/demo1/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf ./dist-1 && ./node_modules/webpack/bin/webpack.js --config ./webpack.config-1.js",
+    "build1": "rm -rf ./dist-1 && ./node_modules/webpack/bin/webpack.js --config ./webpack.config-1.js",
     "build2": "rm -rf ./dist-2 && ./node_modules/webpack/bin/webpack.js --config ./webpack.config-2.js",
     "debug": "node --nolazy --inspect-brk=9229 ./node_modules/webpack/bin/webpack.js --mode development --watch --config ./webpack.config1.js",
     "test": "echo \"Error: no test specified\" && exit 1"
