--- a/packages/vscode-debug/demo4/package.json
+++ b/packages/vscode-debug/demo4/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xmini/webpack4",
+  "name": "@xmini/webpack4-demo4",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,10 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webpack": "^4.31.0"
+    "webpack": "^4.41.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   }
 }
