--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "root",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/**/*"
   ],
   "dependencies": {
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   },
   "jest": {
     "verbose": true,
@@ -18,40 +18,40 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
+    "@babel/core": "^7.6.2",
     "@babel/helper-module-imports": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-classes": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/plugin-transform-classes": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/plugin-transform-template-literals": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-env": "^7.6.2",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-plugin-add-module-exports": "^1.0.2",
-    "babel-plugin-istanbul": "^5.1.2",
+    "babel-plugin-istanbul": "^5.2.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-preset-jest": "^24.6.0",
+    "babel-preset-jest": "^24.9.0",
     "benchmark": "^2.1.4",
-    "conventional-changelog": "3.1.8",
-    "eslint": "^5.16.0",
+    "conventional-changelog": "3.1.10",
+    "eslint": "^6.5.1",
     "eslint-config-essentials": "^1.1.1",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "fs-extra": "^8.0.1",
-    "jest": "^24.8.0",
-    "rimraf": "^2.6.3",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "fs-extra": "^8.1.0",
+    "jest": "^24.9.0",
+    "rimraf": "^3.0.0",
     "@vue/conventional-changelog": "^0.1.1",
     "chalk": "^2.4.2",
-    "lerna": "^3.13.4",
-    "lint-staged": "^8.1.6",
+    "lerna": "^3.16.5",
+    "lint-staged": "^9.4.2",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.17.1",
+    "prettier": "^1.18.2",
     "yorkie": "^2.0.0"
   }
 }
