--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "workspaces": [
     "packages/**/*"
   ],
+  "scripts": {
+    "dev": "webpack -d --config ./build/webpack.config.js",
+    "debug": "node --nolazy --inspect-brk=9229 ./node_modules/webpack/bin/webpack.js --mode development --watch --config ./build/webpack.config.js"
+  },
   "dependencies": {
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
@@ -29,6 +33,7 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/plugin-transform-template-literals": "^7.4.4",
     "@babel/preset-env": "^7.6.2",
+    "@vue/conventional-changelog": "^0.1.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
@@ -37,21 +42,20 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-jest": "^24.9.0",
     "benchmark": "^2.1.4",
-    "conventional-changelog": "3.1.10",
+    "chalk": "^2.4.2",
+    "conventional-changelog": "3.1.12",
     "eslint": "^6.5.1",
-    "eslint-config-essentials": "^1.1.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
     "fs-extra": "^8.1.0",
     "jest": "^24.9.0",
-    "rimraf": "^3.0.0",
-    "@vue/conventional-changelog": "^0.1.1",
-    "chalk": "^2.4.2",
-    "lerna": "^3.16.5",
+    "lerna": "^3.17.0",
     "lint-staged": "^9.4.2",
     "pre-commit": "^1.2.2",
     "prettier": "^1.18.2",
+    "rimraf": "^3.0.0",
+    "yargs": "^14.2.0",
     "yorkie": "^2.0.0"
   }
 }
