--- a/packages/webpack-plugin/package.json
+++ b/packages/webpack-plugin/package.json
@@ -4,7 +4,7 @@
   "description": "webpack-debugging",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --progress --config ./build/webpack.config.js",
+    "dev": "webpack --progress --colors --config ./build/webpack.config.js",
     "debug": "node --nolazy --inspect-brk=9229 ./node_modules/webpack/bin/webpack.js --mode development --watch --config ./build/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
