--- a/packages/webpack-plugin/package.json
+++ b/packages/webpack-plugin/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --nolazy --inspect-brk=9229 ./node_modules/.bin/webpack --watch --progress --colors --mode development --config ./build/webpack.config.js",
-    "build": "./node_modules/.bin/webpack ./build/webpack.config.js",
+    "build": "./node_modules/.bin/webpack --config ./build/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
