--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "workspaces": [
-    "packages/**/*"
+    "webpack4/**/*"
   ],
   "scripts": {
     "dev": "webpack -d --config ./build/webpack.config.js",
